@@ -1,3 +1,9 @@
+2008-08-01  higepon  <higepon@users.sourceforge.jp>
+
+        * RecordTypeDescriptor.h: Added.
+
+        * Callable.h : Added.
+
 2008-07-25  higepon  <higepon@users.sourceforge.jp>
 
         * Implemented all of hashtable procedures!
